<resources>
    <string name="app_name">Ratatouille23</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">password</string>
    <string name="nickname">e-mail</string>
    <string name="login">Accedi</string>
    <string name="home">Home</string>
    <string name="tables">Tavoli</string>
    <string name="restaurant_men">Menù</string>
    <string name="add_personal">Personale</string>
    <string name="notifiche">Notifiche</string>
    <string name="e_mail">e-mail</string>
    <string name="cognome">cognome</string>
    <string name="nome">nome</string>
    <string name="aggiungi_personale">aggiungi personale</string>
    <string name="ruolo">ruolo</string>
</resources>